# RAG_SYS_Demo

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT_SUCCESS.md  Dockerfile  FINAL_CLEANUP.md  LICENSE.md  MIGRATION_SUMMARY.md  NOTICE.md  PROJECT_CLEANUP_SUMMARY.md  README.md  USAGE.md  WATERMARK.txt  ai_guide.txt  check_system.sh  demo.py  docker-compose.yml  final_check.sh  github_ready_check.sh  main.py  pyproject.toml  requirements.txt  start.sh  start_server.sh  stop_server.sh  test_llm.py  test_rag.py  test_sample.py
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  commercial-inquiry.md
config/: __init__.py  api_config.py  comfyui_config.py  llm_config.py  settings.py  vector_config.py
src/: __init__.py
src/agents/: rag_agent.py
src/api/: main.py
src/core/: exceptions.py
src/services/: comfyui_service.py  document_parser.py  llm_service.py  vectorization.py
src/utils/: langsmith_config.py  logger.py  metadata.py  watermark.py
web/: app.js  index.html
workflows/: default.json
