[project]
name = "rag-document-qa-showcase"
version = "2.0.0"
description = "RAG Document Q&A System - Technical Showcase for Learning & Research"
authors = [
    {name = "BalenciCash"}
]
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.10"
keywords = ["rag", "ai", "langchain", "fastapi", "technical-showcase", "learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langgraph>=0.0.20",
    "langsmith>=0.0.70",
    "langchain-groq>=0.1.0",
    "groq>=0.4.0",
    "faiss-cpu>=1.7.4",
    "pypdf>=3.17.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.6",
    "markdown>=3.5",
    "loguru>=0.7.2",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.5.2",
    "numpy>=1.24.0",
    "cryptography>=41.0.7",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "ollama>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[project.urls]
"Homepage" = "https://github.com/Balencicash/RAG_SYS_Demo"
"Repository" = "https://github.com/Balencicash/RAG_SYS_Demo.git"
"Documentation" = "https://github.com/Balencicash/RAG_SYS_Demo#readme"
"Issue Tracker" = "https://github.com/Balencicash/RAG_SYS_Demo/issues"
